<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.luminis</groupId>
  <artifactId>httpjca</artifactId>
  <packaging>jar</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <url>http://repository.jboss.org</url>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.shrinkwrap.resolvers>2.0.0-alpha-1</version.shrinkwrap.resolvers>
    <wildfly.version>8.2.0.Final</wildfly.version>
    <jacoco.version>0.7.4.201502262128</jacoco.version>
    <UNDERTOW_HTTP_HOST>localhost</UNDERTOW_HTTP_HOST>
    <UNDERTOW_HTTP_PORT>8181</UNDERTOW_HTTP_PORT>
  </properties>

  <dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.jboss.arquillian</groupId>
            <artifactId>arquillian-bom</artifactId>
            <version>1.1.8.Final</version>
            <scope>import</scope>
            <type>pom</type>
        </dependency>
    </dependencies>
  </dependencyManagement>
    
  <dependencies>
      <dependency>
          <groupId>org.jboss.spec.javax.resource</groupId>
          <artifactId>jboss-connector-api_1.6_spec</artifactId>
          <version>1.0.1.Final-redhat-2</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.spec.javax.transaction</groupId>
          <artifactId>jboss-transaction-api_1.2_spec</artifactId>
          <version>1.0.0.Final</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>javax.validation</groupId>
          <artifactId>validation-api</artifactId>
          <version>1.0.0.GA</version>
      </dependency>
      <dependency>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpclient</artifactId>
          <version>4.4</version>
      </dependency>
      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
          <version>3.3.2</version>
      </dependency>

      <!-- Test dependencies -->
      <!-- Arquillian test dependecies -->
      <dependency>
          <groupId>org.jboss.arquillian.junit</groupId>
          <artifactId>arquillian-junit-container</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-api</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-spi</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-api-maven</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-spi-maven</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.arquillian.extension</groupId>
          <artifactId>arquillian-jacoco</artifactId>
          <version>1.0.0.Alpha8</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jacoco</groupId>
          <artifactId>org.jacoco.core</artifactId>
          <version>${jacoco.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>io.undertow</groupId>
          <artifactId>undertow-core</artifactId>
          <version>1.1.3.Final</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.12</version>
          <scope>test</scope>
      </dependency>
  </dependencies>
  
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>

    <testResources>
      <testResource>
          <directory>src/test/resources</directory>
          <filtering>true</filtering>
      </testResource>
    </testResources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <excludes>
            <exclude>**/META-INF/*</exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-rar-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <id>package</id>
            <goals>
              <goal>rar</goal>
            </goals>
            <configuration>
              
            </configuration>
          </execution>
        </executions>
      </plugin>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.0-alpha-2</version>
            <executions>
                <execution>
                    <phase>initialize</phase>
                    <goals>
                        <goal>read-project-properties</goal>
                    </goals>
                    <configuration>
                        <files>
                            <file>${wildfly.config}/wildfly-dev.properties</file>
                        </files>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>2.8</version>
            <executions>
                <execution>
                    <id>unpack</id>
                    <phase>process-test-classes</phase>
                    <goals>
                        <goal>unpack</goal>
                    </goals>
                    <configuration>
                        <skip>${wildfly.download.skip}</skip>
                        <artifactItems>
                            <artifactItem>
                                <groupId>org.wildfly</groupId>
                                <artifactId>wildfly-dist</artifactId>
                                <version>${wildfly.version}</version>
                                <type>zip</type>
                                <overWrite>false</overWrite>
                                <outputDirectory>target</outputDirectory>
                            </artifactItem>
                        </artifactItems>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.18.1</version>
            <configuration>
                <argLine>-XX:-UseSplitVerifier ${jacoco.agent.argLine}</argLine>
                <systemProperties>
                    <arquillian.launch>${arquillian.type}</arquillian.launch>

                    <!-- For local builds using a JBoss AS container downloaded. -->
                    <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                    <!-- the maven dependency plugin will have already downloaded the server on /target -->
                    <jboss.home>${project.basedir}/target/wildfly-${wildfly.version}</jboss.home>
                    <module.path>${project.basedir}/target/wildfly-${wildfly.version}/modules</module.path>
                    <javaVmArguments>-Xms1024m -Xmx2048m -XX:PermSize=512M -XX:MaxPermSize=512 -XX:+CMSClassUnloadingEnabled</javaVmArguments>

                    <UNDERTOW_HTTP_HOST>${UNDERTOW_HTTP_HOST}</UNDERTOW_HTTP_HOST>
                    <UNDERTOW_HTTP_PORT>${UNDERTOW_HTTP_PORT}</UNDERTOW_HTTP_PORT>
                </systemProperties>
            </configuration>
            <executions>
                <execution>
                    <id>unit-test</id>
                    <phase>test</phase>
                    <goals>
                        <goal>test</goal>
                    </goals>
                    <configuration>
                        <excludes>
                            <exclude>**/*ITTest.java</exclude>
                        </excludes>
                    </configuration>
                </execution>
                <execution>
                    <id>integration-test</id>
                    <phase>integration-test</phase>
                    <goals>
                        <goal>test</goal>
                    </goals>
                    <configuration>
                        <includes>
                            <include>**/*ITTest.java</include>
                        </includes>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.version}</version>
            <configuration>
                <propertyName>jacoco.agent.argLine</propertyName>
            </configuration>
            <executions>
                <execution>
                    <id>jacoco-initialize</id>
                    <goals>
                        <goal>prepare-agent</goal>
                    </goals>
                </execution>
                <execution>
                    <id>pre-integration-test</id>
                    <phase>pre-integration-test</phase>
                    <goals>
                        <goal>prepare-agent</goal>
                    </goals>
                </execution>
                <execution>
                    <id>post-integration-test</id>
                    <phase>post-integration-test</phase>
                    <goals>
                        <goal>report</goal>
                    </goals>
                </execution>
                <execution>
                    <id>jacoco-site</id>
                    <phase>verify</phase>
                    <goals>
                        <goal>report</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>

        <!-- Use -DrepoToken=<yourCoverallsRepoTokenId> on the command line -->
        <plugin>
            <groupId>org.eluder.coveralls</groupId>
            <artifactId>coveralls-maven-plugin</artifactId>
            <version>3.1.0</version>
        </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-site-plugin</artifactId>
            <version>3.4</version>
            <configuration>
                <reportPlugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-project-info-reports-plugin</artifactId>
                        <version>2.7</version>
                        <configuration>
                            <dependencyDetailsEnabled>true</dependencyDetailsEnabled>
                            <dependencyLocationsEnabled>true</dependencyLocationsEnabled>
                        </configuration>
                        <!-- simpler configuration without reportSets available for usual cases -->
                        <reports>
                            <report>summary</report>
                            <report>dependencies</report>
                            <report>scm</report>
                            <report>cim</report>
                            <report>project-team</report>
                            <report>distribution-management</report>
                            <report>plugins</report>
                        </reports>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-report-plugin</artifactId>
                        <version>2.17</version>
                        <configuration>
                            <inherited>true</inherited>
                            <aggregate>false</aggregate>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                    </plugin>
                </reportPlugins>
            </configuration>
        </plugin>
    </plugins>
  </build>

    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <wildfly.config>${user.home}/config</wildfly.config>
                <wildfly.download.skip>false</wildfly.download.skip>
                <arquillian.type>wildfly-embedded</arquillian.type>
            </properties>

            <dependencies>
                <dependency>
                    <groupId>org.wildfly</groupId>
                    <artifactId>wildfly-arquillian-container-embedded</artifactId>
                    <version>${wildfly.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.wildfly</groupId>
                    <artifactId>wildfly-embedded</artifactId>
                    <version>${wildfly.version}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>jenkins</id>
            <properties>
                <wildfly.config>${wildfly.config.location}</wildfly.config>
                <wildfly.download.skip>true</wildfly.download.skip>
                <arquillian.type>jboss-as7-remote</arquillian.type>
            </properties>
            
            <dependencies>
                <dependency>
                    <groupId>org.jboss.arquillian.container</groupId>
                    <artifactId>arquillian-openshift</artifactId>
                    <version>1.0.0.Final-SNAPSHOT</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.jboss.logmanager</groupId>
                    <artifactId>jboss-logmanager</artifactId>
                    <version>1.5.4.Final-redhat-1</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>test-dummy</id>
            <activation>
                <property>
                    <name>test</name>
                </property>
            </activation>
            <properties>
                <jacoco.agent.argLine></jacoco.agent.argLine>
                <arquillian.type></arquillian.type>
            </properties>
        </profile>
    </profiles>

  <repositories>
    <repository>
      <id>jboss</id>
      <url>http://repository.jboss.org/nexus/content/groups/public</url>
    </repository>
    <repository>
      <id>snapshots</id>
      <url>http://repository.jboss.org/nexus/content/repositories/snapshots</url>
    </repository>
    <repository>
      <id>fungal</id>
      <url>http://jesperpedersen.github.com/fungal/maven2</url>
    </repository>
  </repositories>

</project>
